<resources>
    <string name="app_name">Android10Snippet-post29</string>

    <!-- fragment labels -->
    <string name="dark_theme_label">Dark Theme</string>
    <string name="identifiers_fragment_label">Identifiers and Data</string>
    <string name="media_label">Media</string>
    <string name="ndk_label">NDK Changes</string>
    <string name="privacy_changes_label">Top Privacy Changes</string>
    <string name="security_label">Security</string>
    <string name="telephony_label">Telephony</string>
    <string name="wifi_p2p_label">WiFi Peer to Peer</string>
    <string name="wifi_suggest_label">WiFi Suggest</string>

    <!-- button labels -->
    <string name="access_external_storage_button">Access External Storage</string>
    <string name="connect_to_hotspot">Connect</string>
    <string name="get_contacts_button">Get contacts</string>
    <string name="give_permission">Give permission</string>
    <string name="go_to_next_screen">Go to next Screen</string>
    <string name="launch_location_service">Launch location service</string>
    <string name="start_capture">Start Capture</string>
    <string name="start_hotspot">Start Hotspot</string>
    <string name="stop_capture">Stop Capture</string>
    <string name="take_photo">Take Photo</string>

    <!-- dark theme -->
    <string name="dark_theme_not_supported">Dark theme is not supported in Android 9 and below</string>
    <string name="dark_theme_supported">Starting from Android 10, devices support dark theme. You can switch your app theme below</string>
    <string name="theme_dark">Dark</string>
    <string name="theme_light">Light</string>
    <string name="theme_system">System</string>

    <!-- field labels -->
    <string name="build_serial">Build Serial</string>
    <string name="connection_owner_uid">Connection owners unique identifier</string>
    <string name="media_block">Photos created by your app</string>
    <string name="ndk_text_relocation_title">NDK text relocations have been disabled in Android 10</string>

    <!-- error -->
    <string name="error_build_serial_not_available">Build Serial only available for system apps on Android 10+</string>
    <string name="error_build_serial_not_implemented">Build Serial only available after Android Oreo</string>
    <string name="error_get_uid_not_available">getConnectionOwnerUid not implemented on Android 9 and lower</string>

    <!-- access -->
    <string name="access_external_storage_hint">Text from the file in external storage will be here after you press the button.</string>
    <string name="access_private_media_hint">On devices with Android 9 or lower you have to give a permission to read app media files since scoped storage was not really a thing</string>

    <!-- location -->
    <string name="location_permission_needed_hint">Since Android 10, you will be requested a separate permission for background location</string>
    <string name="location_permission_not_needed_hint">You shouldn\'t see any permission requests</string>

    <!-- media -->
    <string name="media_audio_capture_hint">Android 10 gives an app the ability to capture audio playback from other apps</string>
    <string name="media_audio_capture_start_hint">Press this button to start media capture</string>
    <string name="media_audio_sharing_hint_post29">The behavior prior to Android 10 is \"first come, first served.\" Once an app starts to capture audio, no other apps can access the audio input until the app that is capturing audio stops</string>
    <string name="media_audio_sharing_hint_pre29">Android 10 imposes a priority scheme that can switch the input audio stream between apps while they are running</string>

    <!-- ndk -->
    <string name="ndk_bionic_literal_hint">Bionic libraries use literal paths</string>
    <string name="ndk_bionic_symbolic_hint">Bionic libraries use symbolic links as paths</string>
    <string name="ndk_system_binaries_executable">Binaries are in execute-only memory now</string>
    <string name="ndk_system_binaries_read">You can read executable binary files content</string>

    <!-- notifications -->
    <string name="media_notification_title">Media Notification</string>
    <string name="media_notification_text">Your recording is playing</string>
    <string name="notification_channel_name">Notification channel</string>
    <string name="notification_channel_description">Notification channel description</string>
    <string name="notification_title">My Notification</string>
    <string name="notification_text">Notification text</string>

    <!-- security -->
    <string name="security_tls_1_3_hint">Since Android 10, TLS 1.3 is enabled by default</string>
    <string name="security_tls_cypher_suite">TLS cypher suite</string>
    <string name="security_tls_cypher_suite_custom">You should see TLS_ECDHE_RSA_WITH_AES_128_GCM_SHA256 cypher suite</string>
    <string name="security_tls_cypher_suite_static">Starting with Android 10 TLS cypher suites cannot be customized, so you should see the one chosen by system</string>
    <string name="security_tls_establish_connection_button">Establish Connection</string>
    <string name="security_tls_establish_connection_hint">Press this button to establish TLS connection</string>
    <string name="security_tls_protocol_type">TLS protocol type</string>
    <string name="security_tls_versions_list">Supported security protocols:</string>

    <!-- telephony -->
    <string name="telephony_call_info_hint">Try calling this phone. The information about a caller should be displayed below. To make call service handle the call, please call from an unknown number</string>
    <string name="telephony_call_info_phone_number_uri">Phone number uri: %s</string>
    <string name="telephony_call_info_call_incoming">Call direction: incoming</string>
    <string name="telephony_call_info_call_outgoing">Call direction: outgoing</string>
    <string name="telephony_call_info_caller_name">Caller name: %s</string>
    <string name="telephony_call_info_is_spam">Is spam: %s</string>
    <string name="telephony_call_info_phone_number">Phone number: %s</string>
    <string name="telephony_enable_button">Enable</string>
    <string name="telephony_enable_hint">To access telephony features, please enable the app to access call screening</string>
    <string name="telephony_redirection_enable_button">Set</string>
    <string name="telephony_redirection_enable_hint">To access call redirection, please set the app as the call redirector</string>
    <string name="telephony_redirection_hint_1">If you call the 0987654321 phone number, it should be immediately canceled</string>
    <string name="telephony_redirection_hint_2">If you call the 1234567890 phone number, it should be redirected to the number you input below</string>
    <string name="telephony_redirection_hint_3">If you call any other number, it should work as always</string>
    <string name="telephony_redirection_number_hint">Input the number to redirect to</string>
    <string name="telephony_spam_hint">Enter the calling phone number to mark it as spam</string>

    <!-- wifi -->
    <string name="wifi_p2p_connect_to_hotspot_hint">Press this button to connect to the hotspot</string>
    <string name="wifi_p2p_hint">To test it you will need two devices. You start the hotspot on first device, and on the second one input its ssid it the field below and connect to it</string>
    <string name="wifi_p2p_input_hint">Input hotspot SSID here</string>
    <string name="wifi_p2p_password_hint">Input hotspot password here</string>
    <string name="wifi_p2p_start_hotspot_hint">Press this button to start hotspot</string>
    <string name="wifi_p2p_title">Android 10 introduced new API for establishing WiFi Peer to Peer connections</string>
    <string name="wifi_suggest_connected">You have connected to the suggested network!</string>
    <string name="wifi_suggest_hint">You should see a notification or an alert dialog, depending on your phone version. Note that your phone isnt forced to connect to a suggested network - the decision is on OS to make</string>
    <string name="wifi_suggest_title">Android 10 introduced new API for suggesting WiFi networks</string>
</resources>