<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/wifiP2pLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/wifiP2pTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/wifi_p2p_title"/>

        <TextView
            android:id="@+id/wifiP2pHint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/wifi_p2p_hint"/>

        <TextView
            android:id="@+id/wifiP2pInputSsidHint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/wifi_p2p_input_hint"/>

        <EditText
            android:id="@+id/wifiP2pInputSsid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />

        <TextView
            android:id="@+id/wifiP2pInputPasswordHint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/wifi_p2p_password_hint"/>

        <EditText
            android:id="@+id/wifiP2pInputPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />

        <TextView
            android:id="@+id/wifiP2pConnectToHotspotHint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/wifi_p2p_connect_to_hotspot_hint"/>

        <Button
            android:id="@+id/wifiP2pConnectToHotspotButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/connect_to_hotspot"/>

        <TextView
            android:id="@+id/wifiP2pStatusTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp" />

    </LinearLayout>

    <Button
        android:id="@+id/goToNextScreenButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/go_to_next_screen"
        app:layout_constraintTop_toBottomOf="@id/wifiP2pLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>