<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <TextView
        android:id="@+id/accessScopedStorageTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/access_external_storage_hint"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/accessScopedStorageButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/access_external_storage_button"
        app:layout_constraintTop_toBottomOf="@id/accessScopedStorageTextView" />

    <TextView
        android:id="@+id/mediaBlockTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/media_block"
        app:layout_constraintTop_toBottomOf="@id/accessScopedStorageButton" />

    <LinearLayout
        android:id="@+id/mediaPermissionLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/mediaBlockTitle">

        <TextView
            android:id="@+id/mediaPermissionTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/access_private_media_hint" />

        <Button
            android:id="@+id/giveMediaPermissionButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/give_permission" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/takePhotosLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/mediaPermissionLayout">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/photosRecycler"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            app:spanCount="5" />

        <Button
            android:id="@+id/takePhotoButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/take_photo" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/backgroundLocationLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/takePhotosLayout">

        <TextView
            android:id="@+id/backgroundLocationTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/backgroundLocationButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/launch_location_service" />

    </LinearLayout>

    <Button
        android:id="@+id/goToNextScreenButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/go_to_next_screen"
        app:layout_constraintTop_toBottomOf="@id/backgroundLocationLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>