<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/IdentifiersFragment">

    <fragment
        android:id="@+id/IdentifiersFragment"
        android:name="com.example.post29.identifiers.IdentifiersFragment"
        android:label="@string/identifiers_fragment_label"
        tools:layout="@layout/fragment_identifiers">

        <action
            android:id="@+id/action_IdentifiersFragment_to_PrivacyChangesFragment"
            app:destination="@id/PrivacyChangesFragment" />

    </fragment>

    <fragment
        android:id="@+id/PrivacyChangesFragment"
        android:name="com.example.post29.pc.PrivacyChangesFragment"
        android:label="@string/privacy_changes_label"
        tools:layout="@layout/fragment_privacy_changes">

        <action
            android:id="@+id/action_PrivacyChangesFragment_to_NDKFragment"
            app:destination="@id/NDKFragment" />

    </fragment>

    <fragment
        android:id="@+id/NDKFragment"
        android:name="com.example.post29.ndk.NDKFragment"
        android:label="@string/ndk_label"
        tools:layout="@layout/fragment_ndk">

        <action
            android:id="@+id/action_NDKFragment_to_SecurityFragment"
            app:destination="@id/SecurityFragment" />

    </fragment>

    <fragment
        android:id="@+id/SecurityFragment"
        android:name="com.example.post29.security.SecurityFragment"
        android:label="@string/security_label"
        tools:layout="@layout/fragment_security" />

</navigation>