<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <LinearLayout
        android:id="@+id/tlsLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tlsTypeHint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/security_tls_1_3_hint"/>

        <TextView
            android:id="@+id/tlsVersionsHint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/security_tls_versions_list"/>

        <TextView
            android:id="@+id/tlsVersionsTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/tlsConnectionHint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/security_tls_establish_connection_hint" />

        <Button
            android:id="@+id/tlsConnectionButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/security_tls_establish_connection_button" />

        <LinearLayout
            android:id="@+id/tlsConnectionResultLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
                android:id="@+id/tlsConnectionResultTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/tlsProtocolTypeHint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/security_tls_protocol_type" />

            <TextView
                android:id="@+id/tlsProtocolTypeTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/tlsCypherSuiteHint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/security_tls_cypher_suite" />

            <TextView
                android:id="@+id/tlsCypherSuiteChoiceHint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/tlsCypherSuiteTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/tlsOperationOrderTitleTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/goToNextScreenButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/go_to_next_screen"
        app:layout_constraintTop_toBottomOf="@id/tlsLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>