<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:id="@+id/callScreeningLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/enableTelephonyLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="visible">

            <TextView
                android:id="@+id/enableTelephonyHint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/telephony_enable_hint" />

            <Button
                android:id="@+id/enableTelephonyButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/telephony_enable_button" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/telephonyLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
                android:id="@+id/callInfoHint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/telephony_call_info_hint" />

            <TextView
                android:id="@+id/marlSpamHint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/telephony_spam_hint" />

            <EditText
                android:id="@+id/markSpamEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:autofillHints="+123456789"
                android:inputType="phone" />

            <LinearLayout
                android:id="@+id/callInfoLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="vertical"
                android:visibility="gone">

                <TextView
                    android:id="@+id/phoneNumberUriTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/phoneNumberTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/callerNameTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/callDirectionTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/isSpamTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>

        </LinearLayout>

    </FrameLayout>

    <FrameLayout
        android:id="@+id/callRedirectionLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        app:layout_constraintTop_toBottomOf="@id/callScreeningLayout">

        <LinearLayout
            android:id="@+id/enableRedirectionLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="visible">

            <TextView
                android:id="@+id/enableRedirectionHint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/telephony_redirection_enable_hint" />

            <Button
                android:id="@+id/enableRedirectionButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/telephony_redirection_enable_button" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/redirectionLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
                android:id="@+id/redirectionHint1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/telephony_redirection_hint_1"/>

            <TextView
                android:id="@+id/redirectionHint2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/telephony_redirection_hint_2"/>

            <TextView
                android:id="@+id/redirectionHint3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/telephony_redirection_hint_3"/>

            <TextView
                android:id="@+id/redirectionNumberHint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/telephony_redirection_number_hint"/>

            <EditText
                android:id="@+id/redirectionNumberEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:autofillHints="+123456789"
                android:inputType="phone" />

        </LinearLayout>

    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>