<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <TextView
        android:id="@+id/darkThemeHintTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/chooseThemeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@+id/darkThemeHintTextView"
        tools:visibility="visible">

        <Button
            android:id="@+id/lightThemeButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/theme_light" />

        <Space
            android:layout_width="12dp"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/darkThemeButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/theme_dark" />

        <Space
            android:layout_width="12dp"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/systemThemeButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/theme_system" />

    </LinearLayout>

    <Button
        android:id="@+id/goToNextScreenButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/go_to_next_screen"
        app:layout_constraintTop_toBottomOf="@id/chooseThemeLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>